<resources>
	<string name="welcome_caption">Welcome to PlayScape</string>
	<string name="Close">Close</string>
	<string name="app_name">PlayScape</string>
	<string name="clicked_string">Installing App</string>
	<string name="clicked_run_app">Running App</string>
	<string name="clicked_download_app">Downloading Application</string>
	<string name="download_name">Download</string>
	<string name="eula_title">License Agreement</string>
	<string name="eula_downloading">Loading License Agreement...</string>
	<string name="eula_accept">Accept</string>
	<string name="eula_refuse">Refuse</string>
	<string name="OK">OK</string>
	<string name="Cancel">Cancel</string>
	<string name="RegistrationTitle">Please register</string>
	<string name="CC_Installing">Installing Application</string>
	<string name="CC_RegistrationCompleted">Registration Completed! Games are now unlocked!</string>
	<string name="CC_InstallationCanceled">Installation canceled</string>
	<string name="membership_roaming_mode">Since you are currently roaming Internet communication is blocked. Some of the features will not be available</string>
	<string name="membership_offline_mode">The application cannot connect to the Internet. Some of the features will not be available</string>
	<string name="membership_login_failed">Login process has failed. You can no longer access the members only game section</string>
	<string name="membership_one_day_before_suspension">You\'ve been offline too long - you have one more day to get online before your membership will be suspended</string>
	<string name="membership_suspended">You\'ve been offline too long - your membership has been suspended. For further assistance please contact our support</string>
	<string name="membership_dialog_title">Please note</string>
	<string name="purchase_page_title">Unlock All Games!</string>
	<string name="purchase_page_message">Subscribe and get an unlimited access to our entire game collection.</string>
	<string name="purchase_page_price_sub_title">for each month</string>
	<string name="purchase_page_no">No thanks</string>
	<string name="purchase_page_subscribe">Subscribe</string>
	<string name="purchase_page_checkbox">I agree to the &lt;a href=&quot;http://gameconsle.com/Terms of Service&quot;&gt;Terms of Service&lt;/a&gt;</string>
	<string name="purchase_page_notes_title"><b>Please Note:</b></string>
	<string name="purchase_message_title">Purchase</string>
	<string name="purchase_message_already_paid">Since you already purchased this plan in the past, you were not billed again</string>
	<string name="purchase_complete_without_billing">We were unable to complete the payment process. In the meanwhile, we provide you with free access to our game collection. You have not been billed</string>
	<string name="purchase_complete_with_billing">Congratulations! Your payment request has been authorized. The games have been unlocked!</string>
	<string name="purchase_fail_without_billing_not_allowed">We were unable to complete the payment process. Billing in your region is currently not supported. You are more than welcome to continue using our free game provided with this application</string>
	<string name="purchase_message_please_wait">Please wait...</string>
	<string name="membership_logged_in_non_purchased">You\'re logged-in; but you did not purchase a paid plan</string>
	<string name="purchase_page_notes_bullet">&#8226;   </string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_tos">Terms</string>
	<string name="menu_register">Register</string>
	<string name="menu_unregister">Unregister</string>
	<string name="catalog_refresh_already_executing">Catalog is already being refreshed</string>
	<string name="purchase_name">Purchase</string>
	<string name="purchase_page_registration_failed">Registration process failed - please check your data connection and try again later</string>
	<string name="purchase_page_plans_not_loaded">Sorry, we were unable to contact our servers. Please check your data connectivity</string>
	<string name="purchase_failed_only_in_3g">3G connection is required for the registration process.</string>
	<string name="refresh_dialog_text">Loading game catalog. Please wait...</string>
	<string name="update_message_title">Auto Update</string>
	<string name="update_message_text">A new update is available. Would you like to install it?</string>
	<string name="update_message_button_update">Update Now</string>
	<string name="update_message_button_exit">Exit</string>
	<string name="game_catalog_loading">Loading</string>
	<string name="download_page_downloading">Downloading</string>
	<string name="game_catalog_unlock">Unlock</string>
	<string name="game_download_failed_title">Download Failed</string>
	<string name="game_download_failed_text">Couldn\'t download game - no connection</string>
	<string name="game_download_success">Game downloaded successfully</string>
	<string name="game_download_canceled">Game download canceled</string>
	<string name="game_download_failed_short">An error occurred while downloading the game</string>
	<string name="game_catalog_free1">FREE</string>
	<string name="game_catalog_free2">PLAY</string>
	<string name="catalog_offline_mode_title">Notice</string>
	<string name="catalog_offline_mode_text">The category is not available in offline mode</string>
	<string name="purchase_page_eula_title">Terms Of Use</string>
	<string name="purchase_failed_no_sim">Please insert SIM card</string>
	<string name="purchase_requires_3g_title">Please Notice</string>
	<string name="purchase_requires_3g_text">3G connection is required for the registration process. Please approve</string>
	<string name="unregister_unavailable">You are not registered</string>
	<string name="fortumo_purchase_message">Unlock all games for 30 days</string>
	<string name="next">Next</string>
	<string name="only_single_game_launch_allowed">Only a single game is allowed to be launch at a time!</string>
	<string name="you_earned">You earned:</string>
	<string name="award_dialog_coins_bonus" formatted="false">(+%s level %d bonus)</string>
	<string name="currently_sorted_by">Currently sorted by:</string>
	<string name="mission_sort">Sort Missions</string>
	<string name="mw_sorting_dialog_header_text">Sorting Options</string>
	<string name="mw_needed_to_reach_level">needed for level %d</string>
	<string name="featured">Featured</string>
	<string name="newest">Newest</string>
	<string name="most_rewarding">Most Rewarding</string>
	<string name="completed">Completed</string>
	<string name="mw_missionIsAlreadyCompleted">You’ve completed this mission</string>
	<string name="mw_loading_missions">Loading Missions...</string>
	<string name="play_game_and_mission_desc">Play %1$s and %2$s</string>
    <string name="install_game_and_mission_desc">Install %1$s and %2$s</string>
	<string name="level_up_title">Level Up</string>
	<string name="level_up_sub_title">You have reached level %d!</string>
	<string name="level_up_description">You are now a %s</string>
	<string name="congratulations">Congratulations!</string>
	<string name="mission_completed_title">Mission Completed</string>
	<string name="menu_help">Tutorial</string>
    <string name="latest_missions">Latest Missions</string>
    <string name="levelup_share_text" formatted="false">I have just reached level %1$d while playing %2$s (%3$s)</string>
    <string name="levelup_share_subject" formatted="false">My PlayScape achievement</string>
    <string name="levelup_share_title" formatted="false">PlayScape share</string>
    <string name="gt_back_prompt_body" formatted="false">Are you sure you want to stop the guided tour?</string>
    <string name="gt_back_prompt_title" formatted="false">Warning</string>
    <string name="levelup_coins_bonus_title">Coins bonus</string>
    <string name="levelup_coins_bonus_text">+%1$d%% on all coins earning</string>
    <string name="game_has_no_missions">Missions coming soon...&lt;br/&gt;&lt;br/&gt;&lt;small&gt;In the meantime, we are happy to receive any of your great&lt;br/&gt;&lt;font color="white"&gt;&lt;a href="mailto:support@mominis.com?subject=%s"&gt;comments or suggestions&lt;/a&gt;&lt;/font&gt;&lt;/small&gt;</string>
	<string name="mission_suggestion_subject">Mission suggestion for: %s</string>
	<string name="redirect_dialog_text_google">Redirect to Google Play to download a FREE game version.</string>
	<string name="redirect_dialog_text_amazon">Redirect to Amazon AppStore to download a FREE game version.</string>
    <string name="rate_us_title">Like This App?</string>
    <string name="rate_us_text">Support us by rating it</string>
    <string name="rate_us_special_text">5 stars!</string>
    <string name="MoDi_mapper">mominis.common.utils.MoDiMapper</string>
    <string name="user_data_progress_title">Reloading Data</string>
    <string name="user_data_progress_content">Press Back to cancel</string>
    <string name="tutorial_welcome">Welcome to&lt;br /&gt; [logo]&lt;br /&gt; The easiest way to &lt;br /&gt;&lt;b&gt;play&lt;/b&gt; and &lt;b&gt;discover&lt;/b&gt; &lt;br /&gt;the games you love.</string>
    <string name="tutorial_welcome_from_game">This is&lt;br /&gt;[logo]&lt;br /&gt;Here you can easily&lt;br /&gt;&lt;b&gt;discover&lt;/b&gt; more of the&lt;br /&gt;&lt;b&gt;games&lt;/b&gt; you love. &lt;br /&gt;</string>
    <string name="tutorial_open_mission_wall">So, start unlocking&lt;br /&gt;missions and step into&lt;br /&gt;a landscape of games&lt;br /&gt;</string>
    <string name="tutorial_coins">This is how Rich you are.&lt;br /&gt;You can buy stuff with &lt;br /&gt;Playscape coins.</string>
    <string name="tutorial_xp">This is your XP, it tells you&lt;br /&gt;how awesome you are</string>
    <string name="missions_completed_overlay_desc" formatted="false">Good job! You have completed %1$d new PlayScape missions.</string>
    <string name="social_share_mission_completed" formatted="false">Yay! I just completed &quot;%1$s&quot; mission in %2$s</string>
    <string name="social_share_levelup" formatted="false">Yay! I just reached PlayScape level %1$d while playing %2$s</string>
    <string name="social_share_play_game">Play %1$s</string>
    <string name="goto_menu_more_missions_in_other_games">More missions in other games</string>
    <string name="goto_menu_more_missions">More missions</string>
    <string name="goto_menu_play_missions">Play missions</string>
    <string name="goto_menu_back_to_game">Back to game</string>
    <string name="goto_menu_more_games">More games</string>
    <string name="overlay_level_up_text">Good job! You have completed X new PlayScape missions.</string>
    <string name="overlay_see_missions">See Missions</string>
    <string name="overlay_mission_completed">Mission Completed!</string>
    <string name="overlay_level_up">Level Up!</string>
    <string name="overlay_level_up_desc">Congratulations, you have reached a new PlayScape level by completing missions.</string>
    <string name="overlay_check_it_out">Check it out</string>
    <string name="goto_menu_play_games">Play games</string>
    <string name="playscape_advanced_settings">Advanced Settings</string>
    <string name="playscape_dialog_ok">OK</string>
    <string name="playscape_opt_enabled">Opt-in Enabled</string>
    <string name="opt_alright">Alright!</string>
    <string name="opt_title">Find The Ultimate Game</string>
    <string name="opt_detail">Playscape provides you with great personalized game recommendations. You can opt-out at any time from the catalog</string>
</resources>