<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlay_transparency_level"
    android:gravity="center" >

    <include
        android:layout_height="match_parent"
        layout="@layout/overlay_title" />

    <RelativeLayout
        android:id="@+id/overlay_content"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/overlay_content_height"
        android:layout_below="@+id/overlay_title"
        android:background="@color/overlay_transparency_level" >

        <ImageView
            android:id="@+id/level_up_portrait_image"
            android:layout_width="@dimen/overlay_level_image_width"
            android:layout_height="@dimen/overlay_level_image_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:src="@drawable/overlay_level_up"
            android:visibility="visible" />

        <TextView
            android:id="@+id/lup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/separator_portrait"
            android:layout_marginLeft="@dimen/overlay_title_level_margin_left"
            android:layout_marginTop="@dimen/overlay_title_margin_top"
            android:layout_toRightOf="@+id/level_up_portrait_image"
            android:text="@string/overlay_level_up"
            android:textColor="@color/white"
            android:textSize="@dimen/overlay_title_text_size"
            android:visibility="visible" />

        <TextView
            android:id="@+id/lup_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lup_title"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lup_title"
            android:layout_marginRight="@dimen/overlay_level_desc_container_margin_right"
            android:layout_marginTop="@dimen/overlay_desc_container_margin_top"
            android:layout_toRightOf="@+id/level_up_portrait_image"
            android:text="@string/overlay_level_up_desc"
            android:textColor="@color/white"
            android:textSize="@dimen/overlay_desc_text_size" />

        <Button
            android:id="@+id/lup_ok"
            android:layout_width="@dimen/overlay_button_width"
            android:layout_height="@dimen/overlay_button_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/overlay_button_margin_bottom"
            android:layout_marginRight="@dimen/overlay_button_margin_right"
            android:layout_marginTop="10dp"
            android:background="@drawable/overlay_buttons"
            android:text="@string/overlay_check_it_out"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/overlay_button_text_size"
            android:textStyle="bold" >
        </Button>
    </RelativeLayout>

</RelativeLayout>