<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/opt_dialog_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/opt_dialog_bg">

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/optin_dialog_shadow">

        <LinearLayout
                android:id="@+id/opt_dialog_container"
                android:layout_width="@dimen/opt_dialog_width"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/opt_dialog_content_bg"
                android:gravity="center">

            <ImageView
                    android:id="@+id/opt_backgroud_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/opt_dialog_top_logo_height"
                    android:scaleType="centerCrop"
                    android:background="#000"
                    android:src="@drawable/opt_dialog_bg"/>

            <ImageView
                    android:id="@+id/opt_logo_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/opt_dialog_logo_height"
                    android:paddingTop="@dimen/opt_dialog_logo_padding_top"
                    android:paddingBottom="@dimen/opt_dialog_logo_padding_bottom"
                    android:background="@color/opt_dialog_logo_bg"
                    android:scaleType="centerInside"
                    android:src="@drawable/opt_dialog_playscape_logo_white"/>

            <TextView
                    android:id="@+id/opt_title_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/opt_dialog_title_left_margin"
                    android:layout_marginTop="@dimen/opt_dialog_title_top_margin"
                    android:layout_marginRight="@dimen/opt_dialog_title_right_margin"
                    android:layout_marginBottom="@dimen/opt_dialog_title_bottom_margin"
                    android:gravity="center"
                    android:textColor="@color/opt_title_text_color"
                    android:textSize="@dimen/opt_dialog_title_text_size"
                    android:text="@string/opt_title"/>

            <TextView
                    android:id="@+id/opt_detail_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/opt_dialog_detail_left_margin"
                    android:layout_marginTop="@dimen/opt_dialog_detail_top_margin"
                    android:layout_marginRight="@dimen/opt_dialog_detail_right_margin"
                    android:layout_marginBottom="@dimen/opt_dialog_detail_bottom_margin"
                    android:gravity="center"
                    android:textColor="@color/opt_detail_text_color"
                    android:textSize="@dimen/opt_dialog_detail_text_size"
                    android:text="@string/opt_detail" android:textStyle="bold"/>

            <Button
                    android:id="@+id/opt_alright_button"
                    android:layout_width="@dimen/opt_dialog_alright_button_width"
                    android:layout_height="@dimen/opt_dialog_alright_button_height"
                    android:layout_marginLeft="@dimen/opt_dialog_alright_button_left_margin"
                    android:layout_marginTop="@dimen/opt_dialog_alright_button_top_margin"
                    android:layout_marginRight="@dimen/opt_dialog_alright_button_right_margin"
                    android:layout_marginBottom="@dimen/opt_dialog_alright_button_bottom_margin"
                    android:textColor="@color/opt_alright_button_text_color"
                    android:textSize="@dimen/opt_dialog_alright_button_text_size"
                    android:text="@string/opt_alright"
                    android:background="@drawable/opt_alright_button_bg"/>
        </LinearLayout>

    </FrameLayout>

</RelativeLayout>