<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
        android:padding="0dp"
        android:background="@drawable/dialog_shape_outlined_90" >
        
        <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="0dp"
	        android:layout_alignRight="@+id/rate_us_text_layout"
	        android:layout_above="@+id/rate_us_buttons_layout"
	        android:layout_marginBottom="-10dp"
	        android:background="@drawable/right_stars" />
	        
        <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="0dp"
	        android:padding="0dp"
	        android:layout_alignTop="@+id/rate_us_text_layout"
	        android:layout_alignLeft="@+id/rate_us_text_layout"
	        android:background="@drawable/top_stars" />
	        
        <LinearLayout
            android:gravity="center_horizontal"
            android:id="@+id/rate_us_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/rate_us_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/separator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/rate_us_text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/rate_us_special_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/rate_us_special_text"
                android:textSize="25dp"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/rate_us_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ad_title"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
	        	android:clickable="true"
	        	android:focusable="true"
                android:background="@drawable/stars" />

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/rate_us_buttons_layout"
            android:layout_below="@+id/rate_us_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

	    	<RelativeLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="10dp" >
		
		        <Button
		            android:id="@+id/redirect_cancel_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@drawable/common_dialog_button"
		            android:gravity="center" />
		
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerInParent="true"
		            android:background="@drawable/no_thanks"
		            android:gravity="center" />
		    </RelativeLayout>
		
		    <RelativeLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >
		
		        <Button
		            android:id="@+id/redirect_ok_button"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@drawable/special_dialog_button"
		            android:gravity="center" />
		
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerInParent="true"
		            android:background="@drawable/rate_now"
		            android:gravity="center" />
	    	</RelativeLayout>
		</LinearLayout>

    </RelativeLayout>
    

</RelativeLayout>